--- a/background.html
+++ b/background.html
@@ -235,7 +235,7 @@
     <span>{{ name }}</span><span class='remove'>x</span>
   </script>
   <script type='text/x-tmpl-mustache' id='contact_name_and_number'>
-      <span class='ismuted' style='background-image:url("{{ ismuted.url }}");'></span>
+      <span class='ismuted'></span>
       <h3 class='name' dir='auto'> {{ title }} </h3>
       <div class='number'>{{ number }}</div>
   </script>
